Fix alignments on catalog page on mobile

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -7,6 +7,10 @@
   font-weight: 400;
   line-height: 60px;
 
+  &--catalog {
+    margin-bottom: 28px;
+  }
+
   @include md-size {
     margin-top: 55px;
     padding-top: 0;
